# bipu-firmware

./: .clangd  .gitignore  .gitmodules  BLE.md  BLE_INITIALIZATION_REVIEW.md  BLE_TEST_GUIDE.md  CMakeLists.txt  CTS_TIME_SYNC_IMPLEMENTATION.md  DcodeWORKINGbipupu_espdocsUI_ARCHITECTURE.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_SUMMARY.md  POWER_MANAGEMENT_SOLUTION.md  POWER_MANAGEMENT_TEST.md  README.md  ble_test_sender.py  bluetooth_firmware_reference.md  nle.md  partitions.csv  sdkconfig  sdkconfig.defaults  错误报告.md
.github/workflows/: release.yml
components/app/: CMakeLists.txt  app.c
components/astraui_lite/: CMakeLists.txt
components/ble/: CMakeLists.txt  ble_manager.c  ble_manager.h
components/ble/include/: bipupu_protocol.h  ble_battery_service.h  ble_bipupu_service.h  ble_config.h  ble_cts_service.h  ble_manager.h  ble_nus_service.h  ble_protocol.h
components/ble/src/: bipupu_protocol.c  ble_battery_service.c  ble_bipupu_service.c  ble_cts_service.c  ble_nus_service.c  ble_protocol.c
components/board/: CMakeLists.txt  board.c  board_power_save.c  display.c  (+9 more)
components/ui/: CMakeLists.txt  ui.c  ui_icons.h  ui_render.c
components/ui/include/: ui.h  ui_icons.h  ui_page.h  ui_render.h  ui_status.h  ui_text.h  ui_types.h
components/ui/src/: ui_icons.c  ui_page_list.c  ui_page_main.c  ui_page_message.c  ui_page_settings.c  ui_status.c  ui_text.c
main/: CMakeLists.txt  app.c  app_main.c  astra_ui_example.cpp  astra_ui_usage.c  astra_ui_usage.h  board.c  main.c  main.cpp  ui.c
main/include/: board.h  ui.h
paermkn/: CMakeLists.txt  my_lib.c
(+65 files in other folders)
