idf_component_register(
    SRCS
        "ui.c"
        "ui_render.c"
        "src/ui_status.c"
        "src/ui_text.c"
        "src/ui_page_main.c"
        "src/ui_page_list.c"
        "src/ui_page_message.c"
        "src/ui_page_settings.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        board storage
    PRIV_REQUIRES
        ble
        u8g2
        app
)
